// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Stack Default 1`] = `
<div
  class="-mt-1"
>
  <div
    class="mt-1"
  >
    <span>
      One
    </span>
  </div>
  <div
    class="mt-1"
  >
    
    Two
    
  </div>
  <div
    class="mt-1"
  >
    <span>
      Three
    </span>
  </div>
</div>
`;

exports[`Storyshots Stack With Custom Tags 1`] = `
<ul
  class="-mt-2"
>
  <li
    class="mt-2"
  >
    <span>
      One
    </span>
  </li>
  <li
    class="mt-2"
  >
    
    Two
    
  </li>
  <li
    class="mt-2"
  >
    <span>
      Three
    </span>
  </li>
</ul>
`;

exports[`Storyshots Stack With Sub Component 1`] = `
<div
  class="-mt-2"
>
  <div
    class="mt-2"
  >
    <span>
      One
    </span>
  </div>
   
  <div
    class="mt-2"
  >
    <button
      class="inline-block py-2 px-4 bg-green-200 text-green-900 rounded"
      type="button"
    >
      Two
    </button>
  </div>
   
  <div
    class="mt-2"
  >
    <span>
      Three
    </span>
  </div>
</div>
`;
